# embassy-os

./: Makefile  make_image_in_running_rpi.sh  make_image_on_rpi.sh  mount.sh  setup.sh  umount.sh
agent/config/: fasttorrc  torrc
appmgr/: Cargo.toml
appmgr/src/: api.rs  apps.rs  backup.rs  cli.rs  control.rs  dependencies.rs  disks.rs  error.rs  index.rs  inspect.rs  install.rs  lib.rs  logs.rs  main.rs  manifest.rs  pack.rs  registry.rs  remove.rs  tor.rs  update.rs  util.rs
appmgr/src/api/: api.rs  arg_value.rs  clap_helpers.rs  hyper_helpers.rs  mod.rs  prelude.rs
appmgr/src/config/: mod.rs  rules.rs  spec.rs  util.rs  value.rs
appmgr/src/version/: mod.rs  v0_1_0.rs  v0_1_1.rs  v0_1_2.rs  v0_2_0.rs
